--- a/index.html
+++ b/index.html
@@ -18,7 +18,25 @@
     
     </ul>
 </header>
+<div id ='aboutus'>
+    <p>
+        Salmon Cookies Backeries is a leading company in the cookie industry where it owns many bakeries around the world. We are distinguished by the sincerity of completing orders and delicious taste without any preservatives so keep your health and buy from our bakeries.
+    </p>
+</div>
 
+<div id ='Location'>
+<h3>Our location</h3>
+<ul>
+    <li>Seattle</li>
+    <li>Tokyo</li>
+    <li>Dubai</li>
+    <li>Paris</li>
+    <li>Lima</li>
+</ul>
+</div>
+<div id ='Contactus'>
+
+</div>
 
 </body>
 </html>
