--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
+  
  
     <title>Salmon Cookies Backeries</title>
    <link rel="stylesheet" href="css/reset.css">
@@ -9,34 +9,79 @@
 </head>
 <body>
     <header>
+        
+        <img src="./img/salmon.png" alt="reload the page" id ='logo'>
     <h1>Salmon Cookies Backeries</h1>
     <ul>
-        <li><a href="">About us</a></li>
-        <li><a href="">Location</a></li>
-        <li><a href="/sales.htmlt" target="-blank">Our work</a></li>
-        <li><a href="">Contact us</a></li>
+        <li><a href="#aboutus">About Us</a></li>
+        <li><a href="#photosGallery">Photos Gallery</a></li>
+        <li><a href="#Location">Our Locations</a></li>
+        <li><a href="sales.html">Our Sales</a></li>
+        <li><a href="#Contactus">Contact Us</a></li>
     
     </ul>
 </header>
 <div id ='aboutus'>
+    <h3>About Us :</h3>
     <p>
         Salmon Cookies Backeries is a leading company in the cookie industry where it owns many bakeries around the world. We are distinguished by the sincerity of completing orders and delicious taste without any preservatives so keep your health and buy from our bakeries.
     </p>
 </div>
 
-<div id ='Location'>
-<h3>Our location</h3>
-<ul>
-    <li>Seattle</li>
-    <li>Tokyo</li>
-    <li>Dubai</li>
-    <li>Paris</li>
-    <li>Lima</li>
-</ul>
+<div id='photosGallery'>
+    <h3>Photos Gallery :</h3>
+    <img src="./img/chinook.jpg" alt="reload the page">
+    <img src="./img/cutter.jpeg" alt="reload the page">
+    <img src="./img/family.jpg" alt="reload the page">
+    <img src="./img/fish.jpg" alt="reload the page">
+    <img src="./img/frosted-cookie.jpg" alt="reload the page">
+    <img src="./img/shirt.jpg" alt="reload the page">
 </div>
-<div id ='Contactus'>
+
+
+<div id ='Location'>
+<h3>Our Location :</h3>
+<table>
+    <tr>
+        <th>USA</th>
+        <th>Japan</th>
+        <th>UAE</th>
+        <th>France</th>
+        <th>Peru</th>
+    </tr>
+    <tr>
+        <td>901 12th Ave, <span>Seattle</span>, WA 98122</td>
+        <td><span>Tokyo</span>. 160-. 8582. 03-3353. 1211. St</td>
+        <td>Al Khaleej Street, Al Baraha, PO Box 7272 <span>Dubai</span></td>
+        <td>Champ de Mars, 5 Avenue Anatole France, 75007 <span>Paris</span></td>
+        <td>1001 Bellefontaine Ave, <span>Lima</span>, OH 45804</td>
+    </tr>
+</table>
+   
 
 </div>
+
+
+
+
+
+
+
+<div id ='Contactus'>
+<h3>Contact Us :</h3>
+<p>If you face any problem just contact us don't be shy :</p>
+<ul>
+    <li>Tokyo - 0080-1234-5678</li>
+    <li>Siattle - 001-541-754-3010</li>
+    <li>Dubai -00971 4 8845765 </li>
+    <li>Paris - 0033 1 09 75 83 51</li>
+    <li>Lima - 011-51-912-232-7644</li>
+</ul>
+
+</div>
+<footer>
+    <p>&copy; 2020 Salmon Cookies Backeries</p>
+</footer>
 
 </body>
 </html>
